<resources>
    <string name="app_name">Input Constraints</string>
    <string name="enter_input">Enter Input</string>
    <string name="textview">TextView</string>
    <string name="uppercase_alphabets_a_z">Uppercase Alphabets (A-Z)</string>
    <string name="lowercase_alphabets_a_z">Lowercase Alphabets (a-z)</string>
    <string name="take_input">Take Input</string>
    <string name="input_constraints">Input Constraints</string>
    <string name="mathematical_operations">Mathematical Operations (+, -, /, *, %)</string>
    <string name="digits_0_9">Digits (0-9)</string>
    <string name="other_symbols_etc">Other Symbols ($ ,#, etc)</string>
    <string name="send">Send</string>
</resources>