<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!-- Other Symbols Checkbox -->
    <CheckBox
        android:id="@+id/otherSymBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_symbols_etc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathOperationsBox" />
<!-- Digits Checkbox -->
    <CheckBox
        android:id="@+id/digitsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digits_0_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowerCaseBox" />
<!--Mathematical Operations Checkbox-->
    <CheckBox
        android:id="@+id/mathOperationsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathematical_operations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digitsBox" />
<!--Input Constraints Header-->
    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/input_constraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--UpperCase Checkbox-->
    <CheckBox
        android:id="@+id/upperCaseBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/uppercase_alphabets_a_z"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
<!--LowerCase CheckBox-->
    <CheckBox
        android:id="@+id/lowerCaseBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowercase_alphabets_a_z"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperCaseBox" />

<!-- Button to send constraints -->
    <Button
        android:onClick="sendConstraints"
        android:id="@+id/inputBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherSymBox" />

<!-- Textview to show input received back -->
    <TextView
        android:id="@+id/result"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/textview"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>